--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.connio</groupId>
-	<artifactId>connio-client-example</artifactId>
+	<artifactId>connio-sdk</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>Java example connio client</name>
+	<name>Connio JAVA SDK</name>
 
 	<repositories>
 		<repository>
