--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,20 @@
 			<version>1.7.21</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.26</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 
 	<build>
