--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <scope>test</scope>
         </dependency>
 
+		<dependency>
+			<groupId>com.xebialabs.restito</groupId>
+			<artifactId>restito</artifactId>
+			<version>0.8.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
